--- a/src/style/QuestionContainer.css
+++ b/src/style/QuestionContainer.css
@@ -3,6 +3,13 @@
     text-align: center
 }
 
+.question img{
+    margin: auto;
+    max-width: 400px;
+    max-height: 400px;
+    border-radius: 10px;
+}
+
 .answers_section{
     width: 10em;
     float: left;
