--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: url("./images/dog-cartoon-background.jpg")
 }
 
 .App-logo {
@@ -21,13 +22,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
