--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.progress {
+  width: 50%;
+  margin: auto;
+}
