--- a/src/style/Progress.css
+++ b/src/style/Progress.css
@@ -24,3 +24,17 @@
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
     background-size: 1rem 1rem;
 }
+
+.text-center {
+    padding-bottom: 10px;
+    font-size: 30px;
+}
+
+.out-of-score {
+    width: 60px;
+    margin-top: 20px;
+    font-size: 25px;
+    position: relative;
+    top:10px;
+
+}
